--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 bin
 obj
 *.sln
+/.vs/mslearn-ai-language/CopilotIndices/17.14.670.39694
+/.vs/mslearn-ai-language/DesignTimeBuild
+/.vs/mslearn-ai-language/FileContentIndex
